# one-page-kill-team

./: README.md  pyproject.toml
one-page-kill-team/: convert.py  parse.py
one_page_kill_team/: faction.py  operatives.py  parse.py  ploys.py  utils.py
tests/: test_regression.py
tests/regression_data/json/: ANGELS OF DEATH.json  CORSAIR VOIDSCARRED.json  EXACTION SQUAD.json  FELLGOR RAVAGERS.json  HERNKYN YAEGIRS.json  PHOBOS STRIKE TEAM.json  PLAGUE MARINES.json  SCOUT SQUAD.json  TEMPESTUS AQUILONS.json  VESPID STINGWINGS.json  VOID-DANCER TROUPE.json  WARPCOVEN.json
