[project]
name = "one_page_kill_team"
version = "0.1.0"
description = ""
authors = [
    {name = "Javrel",email = "javrelh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf (>=1.25.2,<2.0.0)",
    "fpdf (>=1.7.2,<2.0.0)",
    "deepdiff (>=8.1.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

